--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,8 @@ url: https://just-the-docs.github.io
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
+
+color_scheme: dark
+mermaid:
+  version: "9.1.3"
+  nav_enabled: true
