--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,5 @@ color_scheme: dark
 mermaid:
   version: "9.1.3"
 nav_enabled: true
+logo: "assets/images/logo.svg"
+favicon_icon: "assets/images/logo.svg"
