--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Documentation | Phish4All"
 description: 
-remote_theme: just-the-docs/just-the-docs
+theme: just-the-docs
 
 color_scheme: dark
 mermaid:
