Configure remote theme and plugins in _config.yml
Added remote theme and plugins configuration.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 title: "Documentation | Phish4All"
 description: 
-theme: just-the-docs
+remote_theme: just-the-docs/just-the-docs
+plugins:
+  - jekyll-remote-theme
 
 color_scheme: dark
 mermaid:
