--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,4 @@ mermaid:
   version: "9.1.3"
 nav_enabled: true
 logo: "assets/images/logo_title.svg"
-favicon_icon: "assets/images/logo.ico"
+favicon_ico: "assets/images/logo.ico"
